force-app/main/default/objects/User/fields/CIPM_Access__c.field-meta.xml
<CustomField>
    <fullName>CIPM_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIPM Access?</label>
    <type>Checkbox</type>
</CustomField>