force-app/main/default/objects/User/fields/CIPM_Id__c.field-meta.xml
<CustomField>
    <fullName>CIPM_Id__c</fullName>
    <label>CIPM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>