force-app/main/default/objects/User/fields/CIPM_Message__c.field-meta.xml
<CustomField>
    <fullName>CIPM_Message__c</fullName>
    <label>CIPM Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>