force-app/main/default/objects/User/fields/CIPM_Status__c.field-meta.xml
<CustomField>
    <fullName>CIPM_Status__c</fullName>
    <label>CIPM Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>