force-app/main/default/objects/User/fields/Is_First_Time_Login__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Time_Login__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is First Time Login</label>
    <type>Checkbox</type>
</CustomField>