force-app/main/default/objects/User/fields/Is_Malaysia__c.field-meta.xml
<CustomField>
    <fullName>Is_Malaysia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Malaysia</label>
    <type>Checkbox</type>
</CustomField>