force-app/main/default/objects/User/fields/Is_Singapore__c.field-meta.xml
<CustomField>
    <fullName>Is_Singapore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Singapore</label>
    <type>Checkbox</type>
</CustomField>