force-app/main/default/objects/User/fields/Is_Thailand__c.field-meta.xml
<CustomField>
    <fullName>Is_Thailand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Thailand</label>
    <type>Checkbox</type>
</CustomField>