force-app/main/default/objects/User/fields/Logon_as_TCP_User__c.field-meta.xml
<CustomField>
    <fullName>Logon_as_TCP_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logon as TCP User</label>
    <type>Checkbox</type>
</CustomField>