force-app/main/default/objects/User/fields/My_AT_Locations__c.field-meta.xml
<CustomField>
    <fullName>My_AT_Locations__c</fullName>
    <label>My AT Locations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>