force-app/main/default/objects/User/fields/Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set__c</fullName>
    <label>Permission Set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>