force-app/main/default/objects/User/fields/RE_Customer_Opps_team__c.field-meta.xml
<CustomField>
    <fullName>RE_Customer_Opps_team__c</fullName>
    <label>Customer Opps team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Operation</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Price desk</fullName>
            </value>
            <value>
                <fullName>Sales Team Lead</fullName>
            </value>
            <value>
                <fullName>Pricing Manager</fullName>
            </value>
            <value>
                <fullName>Business manager</fullName>
            </value>
            <value>
                <fullName>Customer Opps Approver 1</fullName>
            </value>
            <value>
                <fullName>Customer Opps Approver 2</fullName>
            </value>
            <value>
                <fullName>Customer Opps Team</fullName>
            </value>
            <value>
                <fullName>PH Customer Operation</fullName>
            </value>
            <value>
                <fullName>PH Account Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>