force-app/main/default/objects/User/fields/RE_Is_Philippines__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_Philippines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Philippines</label>
    <type>Checkbox</type>
</CustomField>