force-app/main/default/objects/User/fields/Rv_Activate_OLF_Deal__c.field-meta.xml
<CustomField>
    <fullName>Rv_Activate_OLF_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate OLF Deal</label>
    <type>Checkbox</type>
</CustomField>