force-app/main/default/objects/User/fields/Rv_Last_Request_From_OLF__c.field-meta.xml
<CustomField>
    <fullName>Rv_Last_Request_From_OLF__c</fullName>
    <label>Last Request From OLF</label>
    <type>DateTime</type>
</CustomField>