force-app/main/default/objects/User/fields/Rv_Last_Response_From_Revolution__c.field-meta.xml
<CustomField>
    <fullName>Rv_Last_Response_From_Revolution__c</fullName>
    <label>Last Response From Revolution</label>
    <type>DateTime</type>
</CustomField>