force-app/main/default/objects/User/fields/TCP_Region__c.field-meta.xml
<CustomField>
    <fullName>TCP_Region__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>Select the user region among Singapore, Europe and NA</description>
    <label>TCP Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TCP_Region</valueSetName>
    </valueSet>
</CustomField>