force-app/main/default/objects/User/fields/TCP_Role__c.field-meta.xml
<CustomField>
    <fullName>TCP_Role__c</fullName>
    <description>To identify the logged in user type in community.</description>
    <inlineHelpText>To identify the logged in user type in community.</inlineHelpText>
    <label>TCP Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End user</fullName>
            </value>
            <value>
                <fullName>CommOpps user</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>