force-app/main/default/objects/User/fields/TP_Deletion_Request__c.field-meta.xml
<CustomField>
    <fullName>TP_Deletion_Request__c</fullName>
    <label>Deletion Request</label>
    <length>144</length>
    <type>Text</type>
</CustomField>