force-app/main/default/objects/User/listViews/ERate_Tracker_Users.listView-meta.xml
<ListView>
    <fullName>ERate_Tracker_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>startsWith</operation>
        <value>E-Rate</value>
    </filters>
    <label>ERate Tracker Users</label>
    <language>en_US</language>
</ListView>