force-app/main/default/objects/User/listViews/Revolution_East.listView-meta.xml
<ListView>
    <fullName>Revolution_East</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <columns>Permission_Set__c</columns>
    <columns>RE_Is_Philippines__c</columns>
    <columns>RE_Customer_Opps_team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Revolution East</value>
    </filters>
    <filters>
        <field>RE_Customer_Opps_team__c</field>
        <operation>equals</operation>
        <value>PH Customer Operation,PH Account Manager</value>
    </filters>
    <label>Revolution East</label>
    <language>en_US</language>
</ListView>