force-app/main/default/objects/User/listViews/Revolution_Turkey.listView-meta.xml
<ListView>
    <fullName>Revolution_Turkey</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>Permission_Set__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>Revolution Turkey</value>
    </filters>
    <label>Revolution Turkey</label>
    <language>en_US</language>
</ListView>